--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
       "babel-jest": "^29.0.0",
       "jest": "^29.0.0",
       "react-test-renderer": "18.2.0"
+      "eslint": "^9.29.0",
+      "eslint-plugin-react": "^7.33.2",
+      "@eslint/js": "^9.0.0"
     },
     "jest": {
       "preset": "react-native"
