--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "@testing-library/react-native": "^12.1.4",
       "babel-jest": "^29.0.0",
       "jest": "^29.0.0",
-      "react-test-renderer": "18.2.0"
+      "react-test-renderer": "18.2.0",
       "eslint": "^9.29.0",
       "eslint-plugin-react": "^7.33.2",
       "@eslint/js": "^9.0.0"
