--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,12 @@ jobs:
       - name: 📦 Install dependencies
         run: npm install
 
-      - name: 🔍 Run ESLint
-        run: |
-          node --input-type=module --loader node_modules/eslint/experimental-loader.mjs node_modules/eslint/bin/eslint.js .
+      # - name: 🔍 Run ESLint
+      #   run: |
+      #     node --input-type=module --loader node_modules/eslint/experimental-loader.mjs node_modules/eslint/bin/eslint.js .
 
-      - name: ✅ Run unit tests with coverage
-        run: npm test -- --coverage
+      # - name: ✅ Run unit tests with coverage
+      #   run: npm test -- --coverage
 
       - name: ☕ Set up Java
         uses: actions/setup-java@v3
